# bcachefs-tools

./: .bcachefs_revision  .gitignore  CLAUDE.md  Cargo.toml  Changelog.mdwn  Makefile  bcachefs-kmp.spec-preambule  bcachefs-tools.spec  bcachefs.8  crane-build.nix  flake.nix  make-release-tarball.sh  module-build.nix  nixos-test.nix  overlay.nix
bch_bindgen/: Cargo.toml  build.rs
c_src/: bcachefs.c  cmd_attr.c  cmd_counters.c  cmd_data.c  cmd_device.c  cmd_dump.c  cmd_format.c  cmd_fs.c  cmd_fsck.c  cmd_fusemount.c  cmd_image.c  cmd_key.c  cmd_kill_btree_node.c  cmd_list_journal.c  cmd_migrate.c  cmd_option.c  cmd_strip_alloc.c  cmd_strip_alloc.h  cmd_super.c  cmd_super.h  cmd_top.c  cmd_version.c  cmds.h  crypto.c  crypto.h  fuse_shims.c  fuse_shims.h  libbcachefs.c  libbcachefs.h  posix_to_bcachefs.c  posix_to_bcachefs.h  qcow2.c  qcow2.h  rust_shims.c  rust_shims.h  tools-util.c  tools-util.h
debian/: bcachefs-kernel-dkms.install  bcachefs-tools.install  changelog  control  gbp.conf  rules
dkms/: Makefile  dkms.conf  dkms.conf.in  module-version.c  module-version.c.in
doc/: apt.bcachefs.org-README.md  bcachefs-principles-of-operation.tex  bcachefs.5.rst.tmpl
initramfs/: hook.in
libbcachefs/: Makefile  alloc_background.c  backpointers.c  bcachefs.h  bcachefs_format.h  bcachefs_ioctl.h  bkey_buf.h  btree_gc.c  btree_io.c  btree_journal_iter.c  btree_key_cache.c  btree_node_scan.c  chardev.c  errcode.h  extents.c  fs-io-buffered.c  fs-io-buffered.h  fs-ioctl.c  fs.c  fsck.c  io_read.c  journal.c  journal_io.c  migrate.c  movinggc.c  opts.c  opts.h  sb-errors.c  sb-errors_format.h  snapshot.c  super-io.c  super.c  sysfs.c
linux/: bio.c  blkdev.c  fs.c  kobject.c  printk.c  ratelimit.c  sched.c  shrinker.c  sort.c  timer.c  wait.c  workqueue.c
package-ci/: Cargo.toml  bcachefs-package-ci.service
package-ci/doc/: architecture.md
package-ci/scripts/: build-binary-remote.sh  build-binary.sh  build-source.sh  generate-status-html.sh  post-receive  publish.sh  setup-epp.sh  status.sh
package-ci/src/: main.rs
(+184 files in other folders)
