[workspace]
resolver = "2"
members = [".", "bch_bindgen", "doc/docgen"]
default-members = [".", "bch_bindgen"]

[package]
name = "bcachefs-tools"
version = "1.36.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>", "Kent Overstreet <kent.overstreet@linux.dev>" ]
edition = "2021"
rust-version = "1.77.0"

[[bin]]
name = "bcachefs"
path = "src/bcachefs.rs"

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
clap_complete = "4.3.2"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fiemap = "0.2"
libc = "0.2.69"
udev = "0.7.0"
uuid = { version = "1.2.2", features = ["v4"] }
errno = "0.3"
either = "1.5"
bch_bindgen = { path = "bch_bindgen" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
zeroize = { version = "1", features = ["std", "zeroize_derive"] }
rustix = { version = "0.38.34", features = ["event", "fs", "termios"] }
owo-colors = "4"
crossterm = { version = "0.28", default-features = false, features = ["events"] }
tiny_http = "0.12.0"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
fuser = { version = "0.17", optional = true }

[dependencies.env_logger]
version = "0.10"
default-features = false

[profile.release]
strip = "none"

[package.metadata.vendor-filter]
platforms = ["*-linux-*"]
